--- a/app/src/main/res/layout/activity_sms_activity.xml
+++ b/app/src/main/res/layout/activity_sms_activity.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".sms_activity">
+    tools:context=".sms_activity"
+    android:id="@+id/relayerSMS">
 
     <TextView
         android:text="@string/hello_world"
